--- a/nodejs-layer/templates/serverless.dev.yml
+++ b/nodejs-layer/templates/serverless.dev.yml
@@ -2,4 +2,4 @@ provider:
   stackTags:
     lambda_version: "85bd68bc"
   deploymentBucket:
-    name: {{inputs.deploymentBucket}}
+    name: {{inputs.dev_deployment_bucket}}
